Got content in playactivity

--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -45,4 +45,9 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
+    <WebView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/webview"/>
+
 </RelativeLayout>
