--- a/app/src/main/res/layout/activity_song.xml
+++ b/app/src/main/res/layout/activity_song.xml
@@ -57,24 +57,25 @@
         android:layout_below="@+id/transpose_down"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/checkBox"/>
+        android:id="@+id/Diagram"/>
 
     <RadioButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ukulele"
-        android:layout_below="@+id/checkBox"
+        android:layout_below="@+id/Diagram"
         android:layout_centerHorizontal="true"
-         />
+        android:id="@+id/Ukulele" />
 
     <RadioButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Guitar"
-        android:layout_below="@+id/checkBox"
+        android:layout_below="@+id/Diagram"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:checked="true" />
+        android:checked="true"
+        android:id="@+id/Guitar" />
 
     <Button
         android:layout_width="wrap_content"
@@ -85,7 +86,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="115dp"
-        android:onClick="viewSong"/>
+        android:onClick="playSong"/>
 
     <Button
         android:layout_width="wrap_content"
