--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,77 +17,76 @@
         android:hint="@string/song"
         android:id="@+id/songsearch"
         android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/songbtn"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/search"
-        android:id="@+id/artistbtn"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@id/songbtn"
-        android:onClick="loadArtistlist"/>
+    <!--<Button-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/search"-->
+        <!--android:id="@+id/artistbtn"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_alignParentEnd="true"-->
+        <!--android:layout_toEndOf="@+id/artistsearch"-->
+        <!--android:layout_toRightOf="@+id/artistsearch"-->
+        <!--android:onClick="loadArtistlist"/>-->
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/search"
-        android:id="@+id/chordbtn"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@id/artistbtn"
-        android:onClick="loadChords"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/go"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@id/chordbtn"
-        android:onClick="loadSongBook"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/search"
-        android:id="@+id/songbtn"
-        android:onClick="loadSonglist"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+    <!--<Button-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/search"-->
+        <!--android:id="@+id/chordbtn"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_alignParentEnd="true"-->
+        <!--android:layout_toRightOf="@id/artistsearch"-->
+        <!--android:layout_toEndOf="@+id/artistsearch"-->
+        <!--android:onClick="loadChords"/>-->
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/artist"
         android:id="@+id/artistsearch"
-        android:layout_alignBaseline="@+id/artistbtn"
-        android:layout_alignBottom="@+id/artistbtn"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/artistbtn"
-        android:layout_toStartOf="@+id/artistbtn" />
+        android:layout_below="@+id/songsearch"
+        />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/chord"
         android:id="@+id/chordsearch"
-        android:layout_alignBaseline="@+id/chordbtn"
-        android:layout_alignBottom="@+id/chordbtn"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/artistsearch"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/to_songbook"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
-        android:layout_below="@+id/chordsearch"
+        android:layout_below="@+id/majorsearch"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/search"
+        android:onClick="searchAll"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/majorsearch"
+        android:layout_below="@+id/chordsearch"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/go"
+        android:onClick="loadSongBook"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
