--- a/app/src/main/res/layout/activity_song_book.xml
+++ b/app/src/main/res/layout/activity_song_book.xml
@@ -13,5 +13,6 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        android:id="@+id/booklist"/>
 </RelativeLayout>
