--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -42,18 +42,17 @@
             android:text="Hello darkness my old friend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+            android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:id="@+id/chordsLyrics"
+            android:id="@+id/playTitle"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
     <!--</ScrollView>-->
 
-    <WebView
+    <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/webview"
-        android:scrollbars="vertical"/>
+        android:id="@+id/listview"/>
 
 </RelativeLayout>
