--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -53,6 +53,8 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listview"/>
+        android:id="@+id/listview"
+        android:layout_alignParentTop="true"
+        android:layout_below="@id/playTitle"/>
 
 </RelativeLayout>
