--- a/app/src/main/res/layout/activity_song_list.xml
+++ b/app/src/main/res/layout/activity_song_list.xml
@@ -13,14 +13,16 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/results"/>
+        android:text="@string/results"
+        android:id="@+id/header"/>
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/listofstuff"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/listofstuff"/>
+        android:layout_below="@+id/header" />
 
     <!--<Button-->
         <!--android:layout_width="wrap_content"-->
