--- a/app/src/main/res/layout/result_layout.xml
+++ b/app/src/main/res/layout/result_layout.xml
@@ -4,19 +4,8 @@
     android:layout_height="match_parent">
 
 
-
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/titleresult"
-        android:text="title"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:text="Key"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/activity_horizontal_margin"
         android:layout_height="wrap_content"
         android:id="@+id/keyresult"
         android:layout_alignParentTop="true"
@@ -26,15 +15,23 @@
         android:layout_marginEnd="34dp" />
 
     <TextView
+        android:layout_width="@dimen/activity_vertical_margin"
+        android:layout_height="wrap_content"
+        android:id="@+id/titleresult"
+        android:text="title"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@+id/keyresult"
+        android:layout_toStartOf="@+id/keyresult" />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/artistresult"
         android:text="artist"
         android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="126dp"
-        android:layout_marginEnd="126dp" />
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
