--- a/app/src/main/res/layout/activity_chord_list.xml
+++ b/app/src/main/res/layout/activity_chord_list.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginStart="15dp"
-        android:id="@+id/textView"
+        android:id="@+id/chordName"
         android:textSize="50dp"
         android:layout_alignTop="@+id/ChordDiagram"
         android:layout_alignParentLeft="true"
@@ -42,71 +42,71 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
         android:textSize="25dp"
         android:layout_alignBottom="@+id/ChordDiagram"
-        android:layout_alignRight="@+id/textView"
-        android:layout_alignEnd="@+id/textView" />
+        android:layout_alignRight="@+id/chordName"
+        android:layout_alignEnd="@+id/chordName" />
 
-    <TextView
-        android:text="Am Gm Gm7 Gsus2"
-        android:layout_width="130dp"
-        android:textSize="40dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView3"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="13dp" />
+    <!--<TextView-->
+        <!--android:text="Am Gm Gm7 Gsus2"-->
+        <!--android:layout_width="130dp"-->
+        <!--android:textSize="40dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/textView3"-->
+        <!--android:layout_below="@+id/textView2"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:layout_marginTop="13dp" />-->
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        android:layout_alignTop="@+id/textView3"
-        android:layout_alignLeft="@+id/ChordDiagram"
-        android:layout_alignStart="@+id/ChordDiagram"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp"
-        android:id="@+id/imageView2" />
+    <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--app:srcCompat="@android:drawable/btn_star_big_on"-->
+        <!--android:layout_alignTop="@+id/textView3"-->
+        <!--android:layout_alignLeft="@+id/ChordDiagram"-->
+        <!--android:layout_alignStart="@+id/ChordDiagram"-->
+        <!--android:layout_marginLeft="24dp"-->
+        <!--android:layout_marginStart="24dp"-->
+        <!--android:id="@+id/imageView2" />-->
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        android:layout_below="@+id/imageView2"
-        android:layout_alignLeft="@+id/ChordDiagram"
-        android:layout_alignStart="@+id/ChordDiagram"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp"
-        android:id="@+id/imageView3" />
+    <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--app:srcCompat="@android:drawable/btn_star_big_on"-->
+        <!--android:layout_below="@+id/imageView2"-->
+        <!--android:layout_alignLeft="@+id/ChordDiagram"-->
+        <!--android:layout_alignStart="@+id/ChordDiagram"-->
+        <!--android:layout_marginLeft="24dp"-->
+        <!--android:layout_marginStart="24dp"-->
+        <!--android:id="@+id/imageView3" />-->
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        android:layout_below="@+id/imageView3"
-        android:layout_alignLeft="@+id/ChordDiagram"
-        android:layout_alignStart="@+id/ChordDiagram"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp"
-        android:id="@+id/imageView4" />
+    <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--app:srcCompat="@android:drawable/btn_star_big_on"-->
+        <!--android:layout_below="@+id/imageView3"-->
+        <!--android:layout_alignLeft="@+id/ChordDiagram"-->
+        <!--android:layout_alignStart="@+id/ChordDiagram"-->
+        <!--android:layout_marginLeft="24dp"-->
+        <!--android:layout_marginStart="24dp"-->
+        <!--android:id="@+id/imageView4" />-->
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        android:layout_below="@+id/imageView2"
-        android:layout_alignLeft="@+id/ChordDiagram"
-        android:layout_alignStart="@+id/ChordDiagram"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp"
-        android:id="@+id/imageView5" />
+    <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--app:srcCompat="@android:drawable/btn_star_big_on"-->
+        <!--android:layout_below="@+id/imageView2"-->
+        <!--android:layout_alignLeft="@+id/ChordDiagram"-->
+        <!--android:layout_alignStart="@+id/ChordDiagram"-->
+        <!--android:layout_marginLeft="24dp"-->
+        <!--android:layout_marginStart="24dp"-->
+        <!--android:id="@+id/imageView5" />-->
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        android:id="@+id/imageView6"
-        android:layout_below="@+id/imageView4"
-        android:layout_alignLeft="@+id/imageView4"
-        android:layout_alignStart="@+id/imageView4" />
+    <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--app:srcCompat="@android:drawable/btn_star_big_on"-->
+        <!--android:id="@+id/imageView6"-->
+        <!--android:layout_below="@+id/imageView4"-->
+        <!--android:layout_alignLeft="@+id/imageView4"-->
+        <!--android:layout_alignStart="@+id/imageView4" />-->
 
 </RelativeLayout>
