--- a/app/src/main/res/layout/activity_song_book.xml
+++ b/app/src/main/res/layout/activity_song_book.xml
@@ -10,9 +10,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.marlieske.chords4n00bs.SongBookActivity">
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:id="@+id/booklist"/>
+    <TextView
+        android:text="@string/songbook"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/songbook_Title" />
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/songbook_Title"
+            android:id="@+id/songbook_listview"/>
+
 </RelativeLayout>
