--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,34 +10,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.marlieske.chords4n00bs.MainActivity">
 
-
-    <!--<Button-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="@string/search"-->
-        <!--android:id="@+id/artistbtn"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--android:layout_alignParentEnd="true"-->
-        <!--android:layout_toEndOf="@+id/artistsearch"-->
-        <!--android:layout_toRightOf="@+id/artistsearch"-->
-        <!--android:onClick="loadArtistlist"/>-->
-
-    <!--<Button-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="@string/search"-->
-        <!--android:id="@+id/chordbtn"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--android:layout_alignParentEnd="true"-->
-        <!--android:layout_toRightOf="@id/artistsearch"-->
-        <!--android:layout_toEndOf="@+id/artistsearch"-->
-        <!--android:onClick="loadChords"/>-->
-
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/song"
-        android:id="@+id/songsearch"
+        android:id="@+id/main_ET_songsearch"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -48,8 +25,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/chord"
-        android:id="@+id/chordsearch"
-        android:layout_below="@+id/songsearch"
+        android:id="@+id/main_ET_chordsearch"
+        android:layout_below="@+id/main_ET_songsearch"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
@@ -60,8 +37,8 @@
         android:layout_height="wrap_content"
         android:text="@string/search"
         android:onClick="searchAll"
-        android:id="@+id/majorsearch"
-        android:layout_below="@+id/chordsearch"
+        android:id="@+id/main_BTN_search"
+        android:layout_below="@+id/main_ET_chordsearch"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
@@ -72,7 +49,7 @@
         android:layout_height="wrap_content"
         android:text="@string/to_songbook"
         android:onClick="loadSongBook"
-        android:layout_below="@+id/majorsearch"
+        android:layout_below="@+id/main_BTN_search"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
