--- a/app/src/main/res/layout/listview_result_entry.xml
+++ b/app/src/main/res/layout/listview_result_entry.xml
@@ -5,16 +5,6 @@
 
 
     <TextView
-        android:layout_width="@dimen/activity_horizontal_margin"
-        android:layout_height="wrap_content"
-        android:id="@+id/keyresult"
-        android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/artistresult"
-        android:layout_alignEnd="@+id/artistresult"
-        android:layout_marginRight="34dp"
-        android:layout_marginEnd="34dp" />
-
-    <TextView
         android:layout_width="@dimen/activity_vertical_margin"
         android:layout_height="wrap_content"
         android:id="@+id/titleresult"
@@ -22,8 +12,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/keyresult"
-        android:layout_toStartOf="@+id/keyresult" />
+        android:layout_toLeftOf="@+id/artistresult"
+        android:layout_toStartOf="@+id/artistresult" />
 
     <TextView
         android:layout_width="wrap_content"
