--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -43,6 +43,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:id="@+id/playTitle"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
