--- a/app/src/main/res/layout/activity_song.xml
+++ b/app/src/main/res/layout/activity_song.xml
@@ -13,20 +13,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/title"
-        android:id="@+id/Songtitle"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/Key"
-        android:text="@string/key"
-        android:layout_below="@+id/Songtitle"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="@string/transpose"
-        android:layout_below="@+id/Key"
+        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
+        android:layout_below="@+id/song_CB_Diagram"
         android:id="@+id/songTranspose"/>
 
     <Button
@@ -50,15 +39,6 @@
         android:layout_alignParentStart="true"
         android:onClick="scaleUp"/>
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/show_diagrams"
-        android:layout_below="@+id/song_BTN_transpose_down"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/song_CB_Diagram"/>
-
     <!--<RadioButton-->
         <!--android:layout_width="wrap_content"-->
         <!--android:layout_height="wrap_content"-->
@@ -80,24 +60,57 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/play"
-        android:id="@+id/song_BTN_play"
-        android:layout_alignParentBottom="true"
+        android:text="@string/save"
+        android:id="@+id/song_BTN_save"
+        android:layout_marginBottom="12dp"
+        android:onClick="saveSettings"
+        android:layout_above="@+id/song_BTN_play"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="115dp"
-        android:onClick="playSong"/>
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/save"
-        android:id="@+id/song_BTN_save"
-        android:layout_above="@+id/song_BTN_play"
+        android:text="@string/play"
+        android:id="@+id/song_BTN_play"
+        android:layout_marginBottom="116dp"
+        android:onClick="playSong"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="11dp"
-        android:onClick="saveSettings"/>
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/show_diagrams"
+        android:id="@+id/song_CB_Diagram"
+        android:layout_below="@+id/Key"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/Key"
+        android:text="@string/key"
+        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
+        android:layout_below="@+id/Songtitle"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="17dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/title"
+        android:id="@+id/Songtitle"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
