--- a/app/src/main/res/layout/activity_song_list.xml
+++ b/app/src/main/res/layout/activity_song_list.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/results"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         android:id="@+id/songlist_title"/>
 
     <ListView
