--- a/app/src/main/res/layout/listview_lyrcs_entry.xml
+++ b/app/src/main/res/layout/listview_lyrcs_entry.xml
@@ -11,6 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/lyrics_IV_Diagram0"
+        android:text="hfjfrshjkghkdsfg"
+        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
         android:id="@+id/lyrics_Lyrics"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
