--- a/app/src/main/res/layout/listview_result_entry.xml
+++ b/app/src/main/res/layout/listview_result_entry.xml
@@ -5,23 +5,24 @@
 
 
     <TextView
-        android:layout_width="@dimen/activity_vertical_margin"
+        android:layout_width="190dp"
         android:layout_height="wrap_content"
-        android:id="@+id/titleresult"
-        android:text="title"
+        android:text="fdjklsf"
+        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
+        android:id="@+id/result_title"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/artistresult"
-        android:layout_toStartOf="@+id/artistresult" />
+        android:layout_alignParentStart="true" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="190dp"
         android:layout_height="wrap_content"
-        android:id="@+id/artistresult"
-        android:text="artist"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/result_artist"
+        android:text="fdfdsgfdsgjfd"
+        android:layout_alignBaseline="@+id/result_title"
+        android:layout_alignBottom="@+id/result_title"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 
 </RelativeLayout>
