--- a/app/src/main/res/layout/activity_chord_list.xml
+++ b/app/src/main/res/layout/activity_chord_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_chord_list"
     android:layout_width="match_parent"
@@ -9,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.marlieske.chords4n00bs.ChordListActivity">
+    tools:context="com.example.marlieske.chords4n00bs.ChordActivity">
 
     <TextView
         android:layout_width="wrap_content"
