--- a/app/src/main/res/layout/listview_lyrcs_entry.xml
+++ b/app/src/main/res/layout/listview_lyrcs_entry.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,80 +9,78 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/lyrics_IV_Diagram0"
-        android:text="hfjfrshjkghkdsfg"
         android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
         android:id="@+id/lyrics_Lyrics"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/lyrics_IV_Diagram0"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+    <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/lyrics_IV_Diagram0"-->
+        <!--app:srcCompat="@android:drawable/btn_star_big_on"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_centerHorizontal="true" />-->
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/lyrics_IV_Diagram1"
-        android:layout_toRightOf="@id/lyrics_IV_Diagram0"
-        android:layout_toEndOf="@id/lyrics_IV_Diagram0"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+    <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/lyrics_IV_Diagram1"-->
+        <!--android:layout_toRightOf="@id/lyrics_IV_Diagram0"-->
+        <!--android:layout_toEndOf="@id/lyrics_IV_Diagram0"-->
+        <!--app:srcCompat="@android:drawable/btn_star_big_on"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_centerHorizontal="true" />-->
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/lyrics_IV_Diagram1"
-        android:layout_toEndOf="@id/lyrics_IV_Diagram1"
-        android:id="@+id/lyrics_IV_Diagram2"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+    <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_toRightOf="@id/lyrics_IV_Diagram1"-->
+        <!--android:layout_toEndOf="@id/lyrics_IV_Diagram1"-->
+        <!--android:id="@+id/lyrics_IV_Diagram2"-->
+        <!--app:srcCompat="@android:drawable/btn_star_big_on"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_centerHorizontal="true" />-->
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/lyrics_IV_Diagram3"
-        android:layout_toRightOf="@id/lyrics_IV_Diagram2"
-        android:layout_toEndOf="@id/lyrics_IV_Diagram2"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+    <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/lyrics_IV_Diagram3"-->
+        <!--android:layout_toRightOf="@id/lyrics_IV_Diagram2"-->
+        <!--android:layout_toEndOf="@id/lyrics_IV_Diagram2"-->
+        <!--app:srcCompat="@android:drawable/btn_star_big_on"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_centerHorizontal="true" />-->
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/lyrics_IV_Diagram4"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        android:layout_toRightOf="@id/lyrics_IV_Diagram3"
-        android:layout_toEndOf="@id/lyrics_IV_Diagram3"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+    <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/lyrics_IV_Diagram4"-->
+        <!--app:srcCompat="@android:drawable/btn_star_big_on"-->
+        <!--android:layout_toRightOf="@id/lyrics_IV_Diagram3"-->
+        <!--android:layout_toEndOf="@id/lyrics_IV_Diagram3"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_centerHorizontal="true" />-->
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/lyrics_IV_Diagram5"
-        android:layout_toRightOf="@id/lyrics_IV_Diagram4"
-        android:layout_toEndOf="@id/lyrics_IV_Diagram4"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+    <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/lyrics_IV_Diagram5"-->
+        <!--android:layout_toRightOf="@id/lyrics_IV_Diagram4"-->
+        <!--android:layout_toEndOf="@id/lyrics_IV_Diagram4"-->
+        <!--app:srcCompat="@android:drawable/btn_star_big_on"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_centerHorizontal="true" />-->
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/lyrics_IV_Diagram6"
-        android:layout_toRightOf="@id/lyrics_IV_Diagram5"
-        android:layout_toEndOf="@id/lyrics_IV_Diagram5"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+    <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/lyrics_IV_Diagram6"-->
+        <!--android:layout_toRightOf="@id/lyrics_IV_Diagram5"-->
+        <!--android:layout_toEndOf="@id/lyrics_IV_Diagram5"-->
+        <!--app:srcCompat="@android:drawable/btn_star_big_on"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_centerHorizontal="true" />-->
 
     <TextView
         android:layout_width="wrap_content"
